# advent-of-code-2022

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/problems/: day_01.rs  day_02.rs  day_03.rs  day_04.rs
tests/: consts.rs  tests.rs
