[package]
name = "advent-of-code-2022"
version = "0.1.0"
authors = ["Wojciech Gędzierski <mkvzcb@protonmail.com>"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
criterion = "0.3"

[dependencies]
itertools = "0.10.5"

[[bench]]
name = "my_benchmark"
harness = false
